sanger/sites/limb-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limb-dev
spec:
  selector:
    matchLabels:
      app: limb-dev
  replicas: 1
  template:
    metadata: 
      name: limb-dev
      labels:
        app: limb-dev
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: limb-dev
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/limb-dev/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limb-dev-hindlimb
spec:
  selector:
    matchLabels:
      app: limb-dev-hindlimb
  replicas: 1
  template:
    metadata: 
      name: limb-dev-hindlimb
      labels:
        app: limb-dev-hindlimb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: limb-dev-cellxgene-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.14.1
        imagePullPolicy: IfNotPresent
        name: limb-dev-hindlimb
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["/bin/sh"]
        args: ["-c", "yes | cellxgene launch /data/191204hindlimb.h5ad -t 'Hindlimb (log-normalized)' --host 0.0.0.0 --port 5005 --about https://limb-dev.cellgeni.sanger.ac.uk --scripts https://limb-dev.cellgeni.sanger.ac.uk/piwik.js"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: 1
