sanger/sites/limb-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: limb-dev
  labels:
    app: limb-dev
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: limb-dev
---
apiVersion: v1
kind: Service
metadata:
  name: limb-dev-hindlimb
  labels:
    app: limb-dev-hindlimb
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: limb-dev-hindlimb
---
