sanger/sites/limb-dev/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: limb-dev
spec:
  virtualhost:
    fqdn: limb-dev.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: limb-dev
          port: 80
    - match: /static
      services:
        - name: limb-dev-hindlimb
          port: 80
    - match: /hindlimb
      prefixRewrite: "/" 
      services:
        - name: limb-dev-hindlimb
          port: 80
    - match: /ucla-pcw6/
      prefixRewrite: "/" 
      services:
        - name: limb-dev-ucla-pcw6
          port: 80
    - match: /ucla-pcw7/
      prefixRewrite: "/" 
      services:
        - name: limb-dev-ucla-pcw7
          port: 80
    - match: /hindlimb2/
      prefixRewrite: "/" 
      services:
        - name: limb-dev-hindlimb2
          port: 80
    - match: /ew6-pcw5/
      prefixRewrite: "/" 
      services:
        - name: limb-dev-ew6-pcw5
          port: 80
---
